Removed unnecessary </center> field that was messing with aside in DeleteHome, Fixed copypasta typo for AddAgent java file. changed input type of email in AddNewAgent back to text due to formatting issues with the 'email' type validator, but still tinkering with this.

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,13 @@
     box-sizing: border-box;
     border: 2px color #13748a;;
   }
+  input[type=email] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 2px color #13748a;;
+  }
 
   input[type=button], input[type=submit], input[type=reset] {
     background-color: #13748a;
