--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-  input[type=text] {
+  input[type=text], input[type=email] {
     width: 100%;
     padding: 12px 20px;
     margin: 2px 0;
@@ -6,13 +6,6 @@
     border: 2px color #13748a;
   }
   input[type=number] {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-    border: 2px color #13748a;;
-  }
-  input[type=email] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
